--- a/vs/Gicame/Gicame/Gicame.vcxproj
+++ b/vs/Gicame/Gicame/Gicame.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="..\..\..\headers\dataTransfer\ObjectExchanger.h" />
     <ClInclude Include="..\..\..\headers\dataTransfer\ObjectReceiver.h" />
     <ClInclude Include="..\..\..\headers\dataTransfer\ObjectSender.h" />
+    <ClInclude Include="..\..\..\headers\device\Serial.h" />
     <ClInclude Include="..\..\..\headers\interfaces\IDataExchanger.h" />
     <ClInclude Include="..\..\..\headers\interfaces\IReceiver.h" />
     <ClInclude Include="..\..\..\headers\interfaces\ISender.h" />
@@ -190,6 +191,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\src\device\Serial.cpp" />
     <ClCompile Include="..\..\..\src\network\NetworkUtility.cpp" />
     <ClCompile Include="..\..\..\src\network\TcpListeningSocket.cpp" />
     <ClCompile Include="..\..\..\src\network\TcpSocket.cpp" />
