--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,6 @@ vs/Gicame/Gicame/Debug-Win32/*
 vs/Gicame/Gicame/Release-x64/*
 vs/Gicame/Gicame/Debug-x64/*
 Release-Win32/
-Release-Win64/
+Release-x64/
 Debug-Win32/
-Debug-Win64/
+Debug-x64/
