GicameCrypto first file upload

--- a/vs/Gicame/Gicame/Gicame.vcxproj.filters
+++ b/vs/Gicame/Gicame/Gicame.vcxproj.filters
@@ -161,5 +161,8 @@
     <ClCompile Include="..\..\..\src\os\ErrorHandling.cpp">
       <Filter>File di origine\os</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\src\common.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
