--- a/vs/Gicame/Example-EncryptDecryptFile/Example-EncryptDecryptFile.vcxproj
+++ b/vs/Gicame/Example-EncryptDecryptFile/Example-EncryptDecryptFile.vcxproj
@@ -18,11 +18,19 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GicameCrypto\GicameCrypto.vcxproj">
+      <Project>{c63630b5-9b13-4a65-b1d8-e14b248e4522}</Project>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\..\examples\EncryptDecryptFile\main.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{542c9bd0-02fa-44dc-a3da-880aca32ca4b}</ProjectGuid>
-    <RootNamespace>ExampleRpcServerOverTcp</RootNamespace>
+    <ProjectGuid>{78109B7E-FE8B-49BD-BD52-6F0C9143A7A8}</ProjectGuid>
+    <RootNamespace>ExampleEncryptDecryptFile</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -142,9 +150,9 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <Optimization>Disabled</Optimization>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>../../../headers</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -154,17 +162,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\..\examples\RpcServerOverTcp\main.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\..\examples\RpcServerOverTcp\RemoteFunctions.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Gicame\Gicame.vcxproj">
-      <Project>{de37dc5b-b3bf-477f-949d-5507786879fd}</Project>
-    </ProjectReference>
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
